force-app/main/default/objects/AccountContactRelation/fields/E_Signature_Contact__c.field-meta.xml
<CustomField>
    <fullName>E_Signature_Contact__c</fullName>
    <description>The name and email of the account contact. Used in the E-Signature Flow.</description>
    <formula>Contact.FirstName + &apos; &apos; +  Contact.LastName + &apos; &apos; + &apos;(&apos; +  Email__c + &apos;)&apos;</formula>
    <label>E-Signature Contact</label>
    <type>Text</type>
</CustomField>