force-app/main/default/objects/AccountContactRelation/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>Contact.FirstName + &apos; &apos; + Contact.LastName</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>